Bug 666097 - Fix radial gradient drawing in Azure. r=jrmuizel * * * Part 2: Adjust tests to properly confirm passing. r=jrmuizel